@@ -1,0 +1,2 @@
+add_test(NAME post-process
+         COMMAND ${CMAKE_SOURCE_DIR}/src/scripts/test/t_post-process.sh)
