@@ -1,0 +1,9 @@
+0,o,C,1.000000,1,1,1
+600,START,,,1,,
+601,d,C,1.000000,1,1,1
+601,n,C,1.000000,1,1,1
+601,n,R,1.000000,1,1,1
+601,o,C,1.000000,1,1,1
+601,p,C,1.000000,1,1,1
+601,s,C,1.000000,1,1,1
+1500,TERMINATED,,,1,,
