@@ -1,0 +1,4 @@
+100,o,C,9.000000,2,1,2
+300,START,,,2,,
+601,n,C,3.000000,2,1,2
+1200,TERMINATED,,,2,,
