@@ -1,0 +1,4 @@
+400,START,,,3,,
+600,d,C,100.000000,3,1,3
+1200,s,C,100.000000,3,1,3
+1400,TERMINATED,,,3,,
