@@ -1,0 +1,16 @@
+============  =====  =========  =========  ===========  ===========  =====
+          ..     ..    Response Time (s)            ..           ..     ..
+------------  -----  --------------------  -----------  -----------  -----
+ Transaction      %   Average     90th %        Total    Rollbacks      %
+============  =====  =========  =========  ===========  ===========  =====
+    Delivery  14.29      1.000      1.000            1            0   0.00
+   New Order  42.86      1.667      2.600            3            1  33.33
+Order Status  14.29      1.000      1.000            1            0   0.00
+     Payment  14.29      1.000      1.000            1            0   0.00
+ Stock Level  14.29      1.000      1.000            1            0   0.00
+============  =====  =========  =========  ===========  ===========  =====
+
+* Throughput: 0.30 new-order transactions per minute (NOTPM)
+* Duration: 10.0 minute(s) 
+* Unknown Errors: 0
+* Ramp Up Time: 10.0 minute(s)
